examples/reference/linker_regions_phase6_missing_section_option_equals.err
Assembly failed:
3: ERROR [asm202]
    3 | .section code, align
               ^
ERROR: Expected section option in key=value form
